--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ signoutbutton.style.display = 'none'
             <li><a href="projects.html">Projects</a></li>
             <li>
                 <div class="dropdown">
-                    <span>Members ▼</span>
+                    <span>Members &#9660;</span>
                     <div class="dropdown-content">
                       <a class="aboutlinks" href="aboutriyan.php">Riyan A.</a>
                       <a class="aboutlinks" href="aboutrehan.php">Rehan M.</a>
