--- a/thirdprojdoc.html
+++ b/thirdprojdoc.html
@@ -20,6 +20,16 @@ p {
     text-align: center;
     color: darkslategrey;
 }
+.helloworld{
+    text-align: center;
+    border-color: darkslategray;
+    height: 400;
+    width: 1200;
+}
+img{
+    height: 400;
+    width: 400;
+}
 </style>
 <!-- style="background-image: url(AmaanAboutMe.gif);"-->
 <body style="background-color:white">
@@ -32,7 +42,7 @@ p {
             <li><a href="Contact.html">Contacts</a></li>
             <li>
                 <div class="dropdown">
-                    <span>Our Members ▼</span>
+                    <span>Our Members &#9660;</span>
                     <div class="dropdown-content">
                       <a class="aboutlinks" href="aboutriyan.php">Riyan A.</a>
                       <a class="aboutlinks" href="aboutrehan.php">Rehan M.</a>
@@ -52,22 +62,36 @@ p {
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" contact="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Our Projects-CSP Website</title>
+            <meta http-equiv="X-UA-Compatible" contact="IE=edge">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <title>Our Projects-CSP Website</title>
 
        </head>
        <h2>Our Goal</h2>
        <p class ="aboutmeBIO"style="border-color: cyan; color:darkslategrey">
-        The AR Glasses were our attempt at using all our prior knowledge to create an innovative,
-        usable project. They display time onto a glasses lense by utilizing a mirror and an OLED screen.
-        The project itself required us to code an arduino and OLED display, as well as design and build a 
-        frame to mount the electronics conveniently. 
-        <br>
-        The glasses use code written in C along with the AdaFruit library to convert text instructions into code 
-        the OLED display knows how to process.
-        The frame was designed by accurately measuring the dimensions of the glasses and circuitry and then
-        using those to create a 3D model that we could print and mount things to.
+        For our second project, we ventured to make a pair of AR glasses that can display the time on the lens. We initially planned to use the classic method that is seen in countless videos and tutorials but as time progressed, the idea flourished into our current design. In its first phases, we used CAD  to make two separate prototypes. With every phase of the project, we continued improving the design of the chassis. The next roadblock came with the death of our first of 3 OLED screens. The soldering was bridged and the immense heat fried the screen. Screen 2 fell to a similar fate, as part of the solder metal got onto the screen. The third OLED screen was our final chance at a working mechanism and when we plugged it in after soldering, it displayed an image. We have an OLED screen flush against the chassis alongside a mirror placed at a 60º angle relative to the screen. This allows the details of the screen to reflect onto the lens of the glasses. Further into the project, we sought to make the chassis entirely independent from the glasses, so it can work with any pair. With some slight tweaks to the design, we found a version that functions perfectly to our needs. The screen is hooked up to an Arduino, which connects to a computer via a Micro-USB cable. This invention can clip onto almost any pair of glasses and display the time at nearly all times.
     </p>
+    <br></br>
+    <br></br>
+    <br></br>
+    <br></br>
+    <br></br>
+    <br></br>
+    <br></br>
+    <br></br>
+    <br></br>
+    <br></br>
+    <br></br>
+    <br></br>
+    <br></br>
+    <br></br>
+    <br></br>
+    <br></br>
+    <br></br>
+    <div class="helloworld">
+        <img src="glass1.jpeg" height="400" width="400"></img>
+        <img src="glass2.jpeg" height="400" width="400"></img>
+        <img src="glass3.jpeg" height="400" width="400"></img>
+    </div>
 </body>
 </html>
