--- a/projects.html
+++ b/projects.html
@@ -30,7 +30,7 @@ p {
             <li><a href="Contact.html">Contacts</a></li>
             <li>
                 <div class="dropdown">
-                    <span>Our Members ▼</span>
+                    <span>Our Members &#9660;</span>
                     <div class="dropdown-content">
                       <a class="aboutlinks" href="aboutriyan.php">Riyan A.</a>
                       <a class="aboutlinks" href="aboutamaan.php">Amaan M.</a>
