--- a/gamedoc.html
+++ b/gamedoc.html
@@ -108,10 +108,20 @@ p {
         <br></br>
         <br>
         <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <div class="helloworld">
+            <a href="assets.html">Click Here to See What Assets We Used!</a>
+            <a href="https://drive.google.com/drive/folders/1ED2KIdeSfZHUexhHK_kimL6tnZ25XMC5">Click Here to Download the Game!</a>
+            <a href="https://github.com/TrainmanR/Untiycode">Click Here to see the GitHub!</a>
+        </div>
         <div class="helloworld">
         <video width="960" height="720" controls>
             <source src="gamedocvid.mp4" type="video/mp4">
         </video>
         </div>
+
 </body>
 </html>
