--- a/DONOTTOUCH/index.html
+++ b/DONOTTOUCH/index.html
@@ -4,21 +4,21 @@
   </header>
 
 <body>
-<div style='width:100%;height:100%;max-width:100%'>
-  <div id='Super Smash Bros OG'></div>
-</div>
+  <div style='width:100%;height:100%;max-width:100%'>
+    <div id='game'></div>
+  </div>
 
-<script type='text/javascript'>
-  EJS_player = '#game';
+  <script type='text/javascript'>
+   EJS_player = '#game';
   
-  // Can also be mupen64plus_next
-  EJS_core = 'n64';
+    // Can also be mupen64plus_next
+    EJS_core = 'n64';
   
-  // URL to Game rom
-  EJS_gameUrl = 'roms/ssbm.z64';
+    // URL to Game rom
+    EJS_gameUrl = 'roms/ssbm.z64';
   
-  // Path to the data directory
-  EJS_pathtodata = 'https://cdn.emulatorjs.org/latest/data/';
-</script>
-<script src='https://cdn.emulatorjs.org/latest/data/loader.js'></script>
+    // Path to the data directory
+    EJS_pathtodata = 'https://cdn.emulatorjs.org/latest/data/';
+  </script>
+  <script src='https://cdn.emulatorjs.org/latest/data/loader.js'></script>
 </body>
