remove shitty sign in button

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <ul>
             <li><a href="index.html" class="active">Home</a></li>
             <li><a href="projects.html">Projects</a></li>
+            <li><a href="password.php">Login</a></li>
             <li>
                 <div class="dropdown">
                     <span>Members &#9660;</span>
@@ -241,8 +242,6 @@
 
         </div>
 
-
-        <a href="password.php">TEAM MEMBERS ONLY</a>
 
     </body>
     <script src="swiper-bundle.min.js"></script>
