--- a/projects.html
+++ b/projects.html
@@ -26,7 +26,7 @@ p {
         <ul style="background-color:slategray">
             <li><a href="index.html">Home</a></li>
             <li><a href="projects.html">Projects</a></li>
-            <li><a href="password.php">Login/Sign In</a></li>
+            <li><a href="password.php">Login</a></li>
             <li><a href="Contact.html">Contacts</a></li>
             <li>
                 <div class="dropdown">
